--- a/articles/app-service/containers/toc.yml
+++ b/articles/app-service/containers/toc.yml
@@ -23,6 +23,8 @@
       href: quickstart-ruby.md
     - name: Skapa Docker-/Go-app
       href: quickstart-docker-go.md
+    - name: Skapa app med flera behållare
+      href: quickstart-multi-container.md
 - name: Självstudier
   items:
     - name: App med DB
@@ -129,6 +131,8 @@
           href: ../web-sites-scale.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
         - name: Skala ut till flera instanser
           href: ../../monitoring-and-diagnostics/insights-how-to-scale.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
+        - name: Högdensitetsvärd
+          href: ../app-service-high-density-hosting.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
     - name: Övervaka app
       items:
         - name: Anslut till app via SSH
