--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -13,6 +13,8 @@
       href: ../storage/blobs/storage-blob-event-quickstart.md?toc=%2fazure%2fevent-grid%2ftoc.json
     - name: Blob Storage-händelser – PowerShell
       href: ../storage/blobs/storage-blob-event-quickstart-powershell.md?toc=%2fazure%2fevent-grid%2ftoc.json
+    - name: Blob Storage-händelser – Portal
+      href: blob-event-quickstart-portal.md
     - name: Anpassade händelser – Azure CLI
       href: custom-event-quickstart.md
     - name: Anpassade händelser – PowerShell
