--- a/articles/media-services/latest/index.yml
+++ b/articles/media-services/latest/index.yml
@@ -14,12 +14,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 03-20-2018
   ms.author: juliako
-  ms.openlocfilehash: 7e250b59ae9ea370b2c019c012d1e2a0e6be3cb4
-  ms.sourcegitcommit: 16ddc345abd6e10a7a3714f12780958f60d339b6
+  ms.openlocfilehash: 4cab323284bd17de865d97a16b056dd1230010fe
+  ms.sourcegitcommit: 828d8ef0ec47767d251355c2002ade13d1c162af
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 06/19/2018
-  ms.locfileid: "36217620"
+  ms.lasthandoff: 06/25/2018
+  ms.locfileid: "36936318"
 abstract:
   description: Lär dig mer om att strömma videor på begäran, sända live och analysera dina videoklipp med Media Services. Självstudier, API-referenser och annan dokumentation visar hur du säkert levererar ljud- eller videoströmmar på begäran och live, som kan skalas till miljontals användare.
 sections:
@@ -37,7 +37,7 @@ sections:
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: 'Lär dig mer om att strömma filer på begäran, sända direkt och analysera dina videoklipp med Media Services:'
+    text: 'Lär dig mer om att strömma filer på begäran, sända direkt och analysera dina videoklipp med Media Services v3:'
   - type: list
     style: icon48
     items:
@@ -53,6 +53,33 @@ sections:
         src: media/index/AMSIcons-media_analytics.svg
       text: Analysera dina videor
       href: /azure/media-services/latest/analyze-videos-tutorial-with-api
+- title: Exempel
+  items:
+  - type: paragraph
+    text: 'Exempel som visar hur du använder API:er för att strömma videor på begäran, sända live och analysera dina videoklipp med Media Services v3:'
+  - type: list
+    style: icon48
+    items:
+    - image:
+        src: media/index/cli.svg
+      text: Azure CLI
+      href: https://github.com/Azure/azure-docs-cli-python-samples/tree/master/media-services
+    - image:
+        src: media/index/rest.svg
+      text: REST med Postman
+      href: https://github.com/Azure-Samples/media-services-v3-rest-postman
+    - image:
+        src: media/index/logo_dotnet_core.svg
+      text: .NET Core med Visual Studio Code
+      href: https://github.com/Azure-Samples/media-services-v3-dotnet-core-tutorials
+    - image:
+        src: media/index/dotnet.svg
+      text: .NET med Visual Studio
+      href: https://github.com/Azure-Samples/media-services-v3-dotnet-tutorials
+    - image:
+        src: media/index/logo_nodejs.svg
+      text: Node.js
+      href: https://github.com/Azure-Samples/media-services-v3-node-tutorials
 - title: Referens
   items:
   - type: paragraph
