--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -333,6 +333,8 @@
       href: storage-custom-domain-name.md
     - name: Söka i Blob Storage med Azure Search
       href: ../../search/search-blob-storage-integration.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+    - name: Var värd för en statisk webbplats
+      href: storage-blob-static-website.md
     - name: Överföra data
       items:
         - name: AzCopy i Windows
