--- a/articles/azure-functions/index.yml
+++ b/articles/azure-functions/index.yml
@@ -14,12 +14,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 01-23-2017
   ms.author: carolz
-  ms.openlocfilehash: dd4d795e7740cb991c37969f148df8e0a08fa96e
-  ms.sourcegitcommit: 870d372785ffa8ca46346f4dfe215f245931dae1
+  ms.openlocfilehash: 02d6d65653c7fa77c3f1cb2be0e59caf74ca79f1
+  ms.sourcegitcommit: d2bf34f0f2e603ff7491a8614f0d3da3cca64374
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/08/2018
-  ms.locfileid: "33868083"
+  ms.lasthandoff: 06/26/2018
+  ms.locfileid: "36963844"
 abstract:
   description: Azure Functions är en beräkningstjänst <a href="https://azure.microsoft.com/overview/serverless-computing/">utan server</a> som gör det möjligt att köra kod på begäran utan att behöva installera eller hantera infrastruktur. Använd Azure Functions för att köra ett skript eller kod som svar på en rad olika händelser. Lär dig hur du använder Azure Functions med våra snabbstarter, självstudier och exempel.
   aside:
@@ -83,7 +83,7 @@ sections:
     - html: <a href="/azure/azure-functions/functions-create-serverless-api">Skapa ett API utan server med Azure Functions</a>
     - html: <a href="/azure/azure-functions/functions-openapi-definition">Skapa en definition för OpenAPI för en funktion</a>
     - html: <a href="/azure/event-grid/resize-images-on-storage-blob-upload-event">Automatisera storleksändring av överförda bilder med Event Grid</a>
-    - html: <a href="https://docs.microsoft.com/learn/build-serverless-app/index">Skapa ett serverlöst webbprogram som är värd för bilder i Cosmos DB</a>
+    - html: <a href="https://docs.microsoft.com/azure/functions/tutorial-static-website-serverless-api-with-database">Skapa en webbapp utan server för att lagra bilder med metadata</a>
 - title: Exempel
   items:
   - type: list
