--- a/articles/aks/index.yml
+++ b/articles/aks/index.yml
@@ -14,13 +14,14 @@ metadata:
   ms.topic: landing-page
   ms.date: 07-21-2017
   ms.author: carolz
-  ms.openlocfilehash: b67814bc2dd622758ade1fc76f1fade99f718bd6
-  ms.sourcegitcommit: e221d1a2e0fb245610a6dd886e7e74c362f06467
+  ms.openlocfilehash: 081e54a6ed04fa74f96b327b2c9e9e63c9fc01cb
+  ms.sourcegitcommit: 5892c4e1fe65282929230abadf617c0be8953fd9
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/07/2018
+  ms.lasthandoff: 06/29/2018
+  ms.locfileid: "37132632"
 abstract:
-  description: Azure Kubernetes Service (AKS) hanterar din värdmiljö för Kubernetes, vilket gör det enkelt att snabbt distribuera och hantera behållarbaserade program utan kunskaper om orkestrering av behållare. Det eliminerar också problem med pågående åtgärder och underhåll genom etablering, uppgradering och skalning av resurser på begäran, utan att koppla från dina program.<div class="IMPORTANT alert"><p>Viktigt</p><p>Azure Kubernetes Service (AKS) finns för närvarande i <strong>förhandsversion</strong>. Förhandsversioner görs tillgängliga för dig under förutsättning att du godkänner <a href="https://azure.microsoft.com/support/legal/preview-supplemental-terms/">kompletterande användningsvillkor</a>. Vissa aspekter av funktionen kan ändras innan den är allmänt tillgänglig (GA).</p></div>
+  description: Azure Kubernetes Service (AKS) hanterar din värdmiljö för Kubernetes, vilket gör det enkelt att snabbt distribuera och hantera behållarbaserade program utan kunskaper om orkestrering av behållare. Det eliminerar också problem med pågående åtgärder och underhåll genom etablering, uppgradering och skalning av resurser på begäran, utan att koppla från dina program.
 sections:
 - title: Snabbstarter på 5 minuter
   items:
@@ -30,9 +31,13 @@ sections:
     style: icon48
     items:
     - image:
-        src: /azure/media/index/ContainerService.svg
-      text: Skapa ett AKS-kluster
+        src: https://docs.microsoft.com/media/common/i_cligeneric.svg
+      text: Azure CLI
       href: /azure/aks/kubernetes-walkthrough
+    - image:
+        src: https://docs.microsoft.com/media/common/i_portal.svg
+      text: Azure Portal
+      href: /azure/aks/kubernetes-walkthrough-portal
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
@@ -46,7 +51,6 @@ sections:
     - html: <a href="/azure/aks/tutorial-kubernetes-deploy-application">Kör dina behållaravbildningar i Kubernetes (Run your container images in Kubernetes)</a>
     - html: <a href="/azure/aks/tutorial-kubernetes-scale">Skala ett program och Kubernetes-infrastruktur (Scale an application and Kubernetes infrastructure)</a>
     - html: <a href="/azure/aks/tutorial-kubernetes-app-update">Uppdatera ett program som körs i Kubernetes (Update an application running in Kubernetes)</a>
-    - html: <a href="/azure/aks/tutorial-kubernetes-monitor">Övervaka Kubernetes med Log Analytics</a>
     - html: <a href="/azure/aks/tutorial-kubernetes-upgrade-cluster">Uppgradera AKS-kluster</a>
 - title: Referens
   items:
@@ -56,5 +60,7 @@ sections:
     items:
     - title: Kommandorad
       html: <p><a href="/cli/azure/aks">Azure CLI</a></p>
+    - title: Språk
+      html: <p><a href="/dotnet/api/overview/azure/containerservice">.NET</a></p><p><a href="/python/api/overview/azure/containerservice">Python</a></p><p><a href="/java/api/overview/azure/containerservice">Java</a></p><p><a href="/javascript/api/overview/azure/container-service">Node.js</a></p>
     - title: REST
       html: <p><a href="/rest/api/aks">REST API</a></p>
