--- a/articles/cosmos-db/index.yml
+++ b/articles/cosmos-db/index.yml
@@ -14,12 +14,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 04/26/2018
   ms.author: mimig
-  ms.openlocfilehash: 14908c33409684d070ef7aee26445bc7ca3a6d59
-  ms.sourcegitcommit: 266fe4c2216c0420e415d733cd3abbf94994533d
+  ms.openlocfilehash: 0feb26c11ad0a231067fc7b91b83df94e75febe4
+  ms.sourcegitcommit: 5a7f13ac706264a45538f6baeb8cf8f30c662f8f
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 06/01/2018
-  ms.locfileid: "34612613"
+  ms.lasthandoff: 06/29/2018
+  ms.locfileid: "37111671"
 abstract:
   description: Azure Cosmos DB är en globalt distribuerad databas för flera datamodeller. Använd dessa snabbstarter, självstudier och exempel för att utveckla dokument, nyckelvärden, breda kolumner och diagramdatabaser genom att använda populära API:er och programmeringsmodeller. Lär dig sedan att replikera data över flera Azure-regioner och skala dataflödet oberoende av lagringen, samtidigt som du drar nytta av omfattande serviceavtal.
   aside:
@@ -114,7 +114,7 @@ sections:
       - href: /azure/cosmos-db/create-mongodb-flask
       - href: 
       - href: /azure/cosmos-db/create-mongodb-golang
-      - href: 
+      - href: /azure/cosmos-db/create-mongodb-xamarin
     - title: Gremlin-API
       values:
       - href: /azure/cosmos-db/create-graph-java
