--- a/articles/monitoring-and-diagnostics/index.yml
+++ b/articles/monitoring-and-diagnostics/index.yml
@@ -5,20 +5,19 @@ metadata:
   title: Dokumentation om Azure Monitor – självstudier, API-referens | Microsoft Docs
   description: Azure Monitor är en del av Microsoft Azures övergripande övervakningslösning. Med Azure Monitor kan du spåra prestanda, underhålla säkerhet och identifiera trender. Lär dig att granska, skapa aviseringar och arkivera data med våra snabbstarter och självstudier.
   services: monitoring-and-diagnostics
-  author: czeumault
-  manager: carolz
+  author: rboucher
   ms.service: monitoring-and-diagnostics
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 09/18/2017
-  ms.author: carolz
-  ms.openlocfilehash: 44a32aae5b2e98e1f29ee56631e50c84dfe18902
-  ms.sourcegitcommit: 6699c77dcbd5f8a1a2f21fba3d0a0005ac9ed6b7
+  ms.author: robb
+  ms.openlocfilehash: af90087551b41a64b140a79ad527a713b5f1697e
+  ms.sourcegitcommit: 5a7f13ac706264a45538f6baeb8cf8f30c662f8f
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 10/11/2017
-  ms.locfileid: "23070743"
+  ms.lasthandoff: 06/29/2018
+  ms.locfileid: "37111913"
 abstract:
   description: Azure Monitor är en del av Microsoft Azures övergripande övervakningslösning. Med Azure Monitor kan du spåra prestanda, underhålla säkerhet och identifiera trender. Lär dig att granska, skapa aviseringar och arkivera data med våra snabbstarter och självstudier.
 sections:
@@ -46,7 +45,7 @@ sections:
     items:
     - html: <a href="monitor-tutorial-autoscale-performance-schedule">Autoskala baserat på schema eller programprestanda</a>
     - html: <a href="monitor-tutorial-archive-monitoring-data">Arkivera övervakningsdata</a>
-- title: Kostnadsfri videoutbildning för PluralSight
+- title: Kostnadsfri videoutbildning för Pluralsight
   items:
   - type: list
     style: cards
