--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -68,14 +68,18 @@
           href: how-to-register-device-vscode.md
     - name: Installera IoT Edge-körning
       items:
-        - name: På en Linux X64-enhet
+        - name: Linux X64
           href: how-to-install-iot-edge-linux.md
-        - name: På en Linux ARM32-enhet
+        - name: Linux ARM32
           href: how-to-install-iot-edge-linux-arm.md
-        - name: På Windows med Windows-behållare
+        - name: Windows med Windows-behållare
           href: how-to-install-iot-edge-windows-with-windows.md
-        - name: På Windows med Linux-behållare
+        - name: Windows med Linux-behållare
           href: how-to-install-iot-edge-windows-with-linux.md
+        - name: IoT Core
+          href: how-to-install-iot-core.md
+    - name: Automatisk etablering med DPS
+      href: how-to-auto-provision-simulated-device-windows.md
     - name: Utveckla och felsöka moduler
       items:
         - name: 'C#'
@@ -110,8 +114,6 @@
           href: how-to-create-transparent-gateway-windows.md
         - name: Modbus-protokollgateway
           href: deploy-modbus-gateway.md
-    - name: Etablera en IoT Core-enhet
-      href: how-to-install-iot-core.md
     - name: CI/CD i VSTS
       href: how-to-ci-cd.md
     - name: Felsöka
