--- a/articles/cognitive-services/LUIS/index.yml
+++ b/articles/cognitive-services/LUIS/index.yml
@@ -11,36 +11,68 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 05/25/2018
+  ms.date: 06/28/2018
   ms.author: kamrani
-  ms.openlocfilehash: 7d529825733025335f27ce0fe477c117aeaf5c41
-  ms.sourcegitcommit: 50f82f7682447245bebb229494591eb822a62038
+  ms.openlocfilehash: f3ccbb033354afc01fa840b3129d305f04942ffd
+  ms.sourcegitcommit: d7725f1f20c534c102021aa4feaea7fc0d257609
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 06/08/2018
-  ms.locfileid: "35358294"
+  ms.lasthandoff: 06/29/2018
+  ms.locfileid: "37095578"
 abstract:
   description: Language Understanding-tjänsten (LUIS) gör så att ditt program kan förstå vad en person vill när den använder egna ord. LUIS använder maskininlärning för att göra det möjligt för utvecklare att skapa program som kan ta emot indata från användaren i naturligt språk och sedan extrahera betydelse.
 sections:
 - title: Snabbstarter på 5 minuter
   items:
-  - type: list
-    style: unordered
-    items:
-    - html: <a href="luis-get-started-create-app.md">Skapa en app för en fördefinierad domän</a>
-    - html: <a href="luis-quickstart-intents-only.md">Skapa en app för en anpassad domän</a>
+  - type: table
+    style: dataMatrix
+    columns:
+    - image:
+        src: media/index/logo_csharp.svg
+    - image:
+        src: media/index/logo_java.svg
+    - image:
+        src: media/index/logo_js.svg
+    - image:
+        src: media/index/logo_nodejs.svg
+    - image:
+        src: media/index/logo_python.svg
+    - image:
+        src: media/index/logo_php.svg
+    - image:
+        src: media/index/logo_ruby.svg
+    rows:
+    - title: Slutpunkts-API
+      values:
+      - href: luis-get-started-cs-get-intent
+      - href: luis-get-started-java-get-intent
+      - href: luis-get-started-js-get-intent
+      - href: luis-get-started-node-get-intent
+      - href: luis-get-started-python-get-intent
+      - href: luis-get-started-php-get-intent
+      - href: luis-get-started-ruby-get-intent
+    - title: Redigera API
+      values:
+      - href: luis-get-started-cs-add-utterance
+      - href: luis-get-started-java-add-utterance
+      - href: luis-get-started-javascript-add-utterance
+      - href: luis-get-started-node-add-utterance
+      - href: luis-get-started-python-add-utterance
+      - href: luis-get-started-php-add-utterance
+      - href: luis-get-started-ruby-add-utterance
 - title: Stegvisa självstudier
   items:
   - type: list
     style: ordered
     items:
-    - html: <a href="luis-quickstart-primary-and-secondary-data">Extrahera meddelandedata från ett yttrande med en enkel entitet</a>
-    - html: <a href="luis-quickstart-intents-regex-entity">Extrahera KB-artikelnummer från ett yttrande med en reguljär uttrycksentitet</a>
-    - html: <a href="luis-quickstart-intent-and-list-entity">Extrahera information om dryckesbeställning från ett yttrande med en listentitet</a>
-    - html: <a href="luis-tutorial-pattern">Förbättra avsikts- och entitetsförutsägelse med mönster</a>
-    - html: <a href="luis-tutorial-interchangeable-phrase-list">Förbättra ordsignifikans med en fraslista</a>
-    - html: <a href="luis-get-started-cs-get-intent">Skicka ett yttrande till LUIS och ta emot slutpunktens förutsägelsesvar – C#</a>
-    - html: <a href="luis-get-started-cs-add-utterance">Lägga till ett exempelyttrande till en avsikt och träna LUIS-appen – C#</a>
+    - html: <a href="luis-quickstart-intents-only">Skapa en app för HR-domänen (Human Resources)</a>
+    - html: <a href="luis-tutorial-prebuilt-intents-entities">Lägga till fördefinierade avsikter och entiteter</a>
+    - html: <a href="luis-quickstart-intents-regex-entity">Lägga till entitet för reguljära uttryck</a>
+    - html: <a href="luis-quickstart-intent-and-list-entity">Lägga till listentitet</a>
+    - html: <a href="luis-quickstart-intent-and-hier-entity">Lägga till hierarkisk entitet</a>
+    - html: <a href="luis-quickstart-primary-and-secondary-data">Lägga till en enkel entitet och fraslista</a>
+    - html: <a href="luis-quickstart-intent-and-key-phrase">Lägga till keyPhrase-entitet</a>
+    - html: <a href="luis-quickstart-intent-and-sentiment-analysis">Lägga till attitydanalys</a>
 - title: Videoklipp
   items:
   - type: list
