--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -17,18 +17,6 @@
       href: quickstart-cpp-linux.md
     - name: Komma igång med Speech Devices SDK
       href: speech-devices-sdk-qsg.md
-- name: Anpassning
-  items:
-    - name: Anpassa talmodeller
-      href: how-to-customize-speech-models.md
-    - name: Anpassa rösttyper
-      href: how-to-customize-voice-font.md
-    - name: Förbered avskrifter
-      href: prepare-transcription.md
-    - name: Använda anpassade ljudströmmar
-      href: how-to-use-audio-input-streams.md
-    - name: Anpassa väckningsord för enhet (Devices SDK)
-      href: speech-devices-sdk-create-kws.md
 - name: Instruktionsguider
   items:
     - name: Identifiera tal
@@ -39,8 +27,22 @@
       href: how-to-translate-speech.md
     - name: Hämta Speech Devices SDK
       href: get-speech-devices-sdk.md
-    - name: Batch-transkription (kundtjänst)
+    - name: Batch-transkription
       href: batch-transcription.md
+- name: Anpassning
+  items:
+    - name: Anpassa akustiska modeller
+      href: how-to-customize-acoustic-models.md
+    - name: Anpassa språkmodeller
+      href: how-to-customize-language-model.md
+    - name: Anpassa rösttyper (Bot Brand Voice)
+      href: how-to-customize-voice-font.md
+    - name: Förbered avskrifter
+      href: prepare-transcription.md
+    - name: Använda anpassade ljudströmmar
+      href: how-to-use-audio-input-streams.md
+    - name: Anpassa väckningsord för enhet (Devices SDK)
+      href: speech-devices-sdk-create-kws.md
 - name: Exempel
   items:
     - name: Ladda ned exempel
