--- a/articles/log-analytics/toc.yml
+++ b/articles/log-analytics/toc.yml
@@ -39,6 +39,8 @@
       href: log-analytics-data-security.md
     - name: Hantera åtkomst
       href: log-analytics-manage-access.md
+    - name: Översikt över agenter
+      href: ../monitoring/monitoring-overview-azure-agents.md
     - name: Övervaka hybridmiljöer
       href: log-analytics-concept-hybrid.md
     - name: Funktioner för tjänstleverantörer
