--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -47,6 +47,8 @@
       href: search-semi-structured-data.md
     - name: Lägga till synonymer i .NET
       href: search-synonyms-tutorial-sdk.md
+    - name: Lägg till automatisk komplettering i .NET
+      href: search-autocomplete-tutorial.md
     - name: Genomgång för portal
       href: search-get-started-portal.md
 - name: Exempel
