--- a/articles/search/index.yml
+++ b/articles/search/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 05/01/2018
   ms.author: heidist
-  ms.openlocfilehash: ac99a23ede3a8adbf60d210b74f642ce4b0131a4
-  ms.sourcegitcommit: d98d99567d0383bb8d7cbe2d767ec15ebf2daeb2
+  ms.openlocfilehash: 286bce88dabe71c64d499687e6d6c758f17f60a5
+  ms.sourcegitcommit: d7725f1f20c534c102021aa4feaea7fc0d257609
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/10/2018
-  ms.locfileid: "33943186"
+  ms.lasthandoff: 06/29/2018
+  ms.locfileid: "37099600"
 abstract:
   description: Lär dig hur du skapar en söklösning för företag med privat, heterogent innehåll med hjälp av Azure Search. Självstudier, API-referenser och andra dokument visar dig hur du konsoliderar sökbart innehåll till ett enda snabbt frågningsbart index med hjälp av enkel-till-avancerad syntax för en mängd olika scenarier. <p/><b>Ny kognitiv förhandsversion för sökning.</b> Använd en förhandsversion av REST API för att binda AI-drivna algoritmer för indexering av pipeline. Extrahera data och anropa bearbetning av naturligt språk och bilder för att omvandla ostrukturerat innehåll i råformat till sökbart innehåll i ett Azure Search-index. <p/>Kom igång med <a href="/azure/search/cognitive-search-quickstart-blob">resurser och exempeldata</a> eller läs mer i <a href="/azure/search/cognitive-search-concept-intro">Koncept</a>.
   aside:
@@ -62,6 +62,7 @@ sections:
     - html: <a href="/azure/search/search-indexer-tutorial">Indexera Azure SQL Database-innehåll med .NET</a>
     - html: <a href="/azure/search/search-semi-structured-data">Indexera halvstrukturerade data i Azure Blob Storage med REST</a>
     - html: <a href="/azure/search/search-synonyms-tutorial-sdk">Lägga till synonymer för att returnera resultat för motsvarande termer</a>
+    - html: <a href="/azure/search/search-autocomplete-tutorial">Lägga till automatisk komplettering i sökrutan med .NET</a>
     - html: <a href="/azure/search/search-get-started-portal">Använda portalen för indexering och frågetestning</a>
 - title: Referens
   items:
