--- a/articles/security/TOC.yml
+++ b/articles/security/TOC.yml
@@ -51,6 +51,29 @@
       href: ../storage/common/storage-security-guide.md?toc=%2fazure%2fsecurity%2ftoc.json
 - name: Plattform och infrastruktur
   items:
+    - name: Säkerhet för infrastruktur
+      href: azure-security-infrastructure.md
+      items:
+        - name: Fysisk säkerhet
+          href: azure-physical-security.md
+        - name: Tillgänglighet
+          href: azure-infrastructure-availability.md
+        - name: Komponenter och gränser
+          href: azure-infrastructure-components.md
+        - name: Nätverksarkitektur
+          href: azure-infrastructure-network.md
+        - name: Produktionsnätverk
+          href: azure-production-network.md
+        - name: SQL Database
+          href: azure-infrastructure-sql.md
+        - name: Åtgärder
+          href: azure-infrastructure-operations.md
+        - name: Övervakning
+          href: azure-infrastructure-monitoring.md
+        - name: Integritet
+          href: azure-infrastructure-integrity.md
+        - name: Dataskydd
+          href: azure-protection-of-customer-data.md
     - name: Microsoft-programvara mot skadlig kod
       href: azure-security-antimalware.md
     - name: IaaS-säkerhet
