--- a/articles/cognitive-services/Computer-vision/index.yml
+++ b/articles/cognitive-services/Computer-vision/index.yml
@@ -14,12 +14,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 06/22/2018
   ms.author: nolachar
-  ms.openlocfilehash: 72adfaf478596e5f3153cee6eee9d70f1c02c31f
-  ms.sourcegitcommit: 6eb14a2c7ffb1afa4d502f5162f7283d4aceb9e2
+  ms.openlocfilehash: 7a68ff1e0cc80c99ec94cfe6f0480408afa92431
+  ms.sourcegitcommit: 4597964eba08b7e0584d2b275cc33a370c25e027
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 06/25/2018
-  ms.locfileid: "36751970"
+  ms.lasthandoff: 07/02/2018
+  ms.locfileid: "37340720"
 abstract:
   description: Det molnbaserade API:et för visuellt innehåll ger utvecklare åtkomst till avancerade algoritmer för bearbetning av bilder och returnering av information. Genom att ladda upp en bild eller ange en bilds webbadress kan Microsofts algoritmer för visuellt innehåll analysera visuellt innehåll på olika sätt beroende på indata och användarens val. Lär dig hur du analyserar visuellt innehåll på olika sätt med snabbstarter, självstudier och exempel.
 sections:
@@ -33,11 +33,7 @@ sections:
     - image:
         src: media/index/logo_Csharp.svg
       text: C&#35;
-      href: QuickStarts/CSharp-analyze
-    - image:
-        src: media/index/logo_go.svg
-      text: Go
-      href: QuickStarts/go-analyze
+      href: quickstarts-sdk/csharp-analyze-sdk
     - image:
         src: media/index/logo_java.svg
       text: Java
@@ -50,6 +46,10 @@ sections:
         src: media/index/logo_python.svg
       text: Python
       href: QuickStarts/python-analyze
+    - image:
+        src: media/index/logo_go.svg
+      text: Go
+      href: QuickStarts/go-analyze
 - title: Referens
   items:
   - type: list
@@ -59,4 +59,4 @@ sections:
     - title: API:er
       html: <p><a href="https://westus.dev.cognitive.microsoft.com/docs/services/5adf991815e1060e6355ad44">API v2.0 för visuellt innehåll</a></p> <p><a href="https://westus.dev.cognitive.microsoft.com/docs/services/56f91f2d778daf23d8ec6739">API v1.0 för visuellt innehåll</a></p>
     - title: SDK:er
-      html: <p><a href="https://github.com/Azure/azure-sdk-for-go/tree/master/services/cognitiveservices/v1.0/computervision">Go</a></p> <p><a href="https://docs.microsoft.com/javascript/api/overview/azure/cognitive-services?view=azure-node-latest#vision-modules">Node.js</a></p> <p><a href="https://docs.microsoft.com/python/api/overview/azure/cognitive-services?view=azure-python#vision-modules">Python</a></p> <p><a href="https://github.com/Microsoft/Cognitive-vision-windows">Windows</a></p> <p><a href="https://github.com/Microsoft/Cognitive-vision-android">Android</a></p> <p><a href="https://github.com/DanilaVladi/Microsoft-Cognitive-Services-Swift-SDK">Swift</a></p>
+      html: <p><a href="https://github.com/Microsoft/Cognitive-vision-windows">Windows</a></p> <p><a href="https://docs.microsoft.com/javascript/api/overview/azure/cognitive-services?view=azure-node-latest#vision-modules">Node.js</a></p> <p><a href="https://docs.microsoft.com/python/api/overview/azure/cognitive-services?view=azure-python#vision-modules">Python</a></p> <p><a href="https://github.com/Azure/azure-sdk-for-go/tree/master/services/cognitiveservices/v1.0/computervision">Go</a></p> <p><a href="https://github.com/Microsoft/Cognitive-vision-android">Android</a></p> <p><a href="https://github.com/DanilaVladi/Microsoft-Cognitive-Services-Swift-SDK">Swift</a></p>
