--- a/articles/cognitive-services/Face/toc.yml
+++ b/articles/cognitive-services/Face/toc.yml
@@ -1,11 +1,11 @@
 - name: Dokumentation om Ansikts-API
   href: index.yml
 - name: Översikt
+  expanded: true
   items:
     - name: Vad är Ansikts-API?
       href: Overview.md
 - name: Snabbstarter
-  expanded: true
   items:
     - name: 'C#'
       href: QuickStarts/CSharp.md
@@ -53,16 +53,18 @@
   items:
     - name: Ansikts-API
       href: APIReference.md
+    - name: Ordlista
+      href: Glossary.md
     - name: 'SDK:er'
       items:
-        - name: Go
-          href: 'https://github.com/Azure/azure-sdk-for-go/tree/master/services/cognitiveservices/v1.0/face'
+        - name: Windows
+          href: 'https://github.com/Microsoft/Cognitive-Face-Windows'
         - name: Node.js
           href: 'https://docs.microsoft.com/javascript/api/overview/azure/cognitive-services?view=azure-node-latest#vision-modules'
         - name: Python
           href: 'https://github.com/Microsoft/Cognitive-Face-Python'
-        - name: Windows
-          href: 'https://github.com/Microsoft/Cognitive-Face-Windows'
+        - name: Go
+          href: 'https://github.com/Azure/azure-sdk-for-go/tree/master/services/cognitiveservices/v1.0/face'
         - name: Android
           href: 'https://github.com/Microsoft/Cognitive-Face-Android'
         - name: iOS
@@ -81,7 +83,7 @@
       href: 'https://stackoverflow.com/questions/tagged/microsoft-cognitive'
     - name: Azure-översikt
       href: 'https://azure.microsoft.com/roadmap/?category=ai-machine-learning'
-    - name: Ordlista
-      href: Glossary.md
+    - name: Regional tillgänglighet
+      href: 'https://azure.microsoft.com/global-infrastructure/services/'
     - name: Viktig information
       href: ReleaseNotes.md
