--- a/articles/security/TOC.yml
+++ b/articles/security/TOC.yml
@@ -10,6 +10,8 @@
       href: azure-log-audit.md
     - name: Azure-nätverkssäkerhet
       href: azure-network-security.md
+    - name: Säkerhet för Azure-plattform utan server
+      href: abstract-serverless-platform-security.md
     - name: Aktivera driftsäkerhet
       href: azure-operational-security.md
     - name: Styrning i Azure
