--- a/articles/cognitive-services/Translator/toc.yml
+++ b/articles/cognitive-services/Translator/toc.yml
@@ -157,15 +157,17 @@
           href: return-n-best-translations.md
 - name: Resurser
   items:
-    - name: VANLIGA FRÅGOR OCH SVAR
-      href: 'https://www.microsoft.com/translator/faq.aspx'
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/cognitive-services/translator-text-api/'
-    - name: UserVoice
-      href: 'https://cognitive.uservoice.com/forums/558796-translator'
-    - name: Stack Overflow
-      href: 'https://stackoverflow.com/questions/tagged/microsoft-translator'
-    - name: Kunskapsbas
-      href: 'https://cognitive.uservoice.com/knowledgebase/topics/132647-translator'
     - name: Kodexempel på GitHub
       href: 'https://aka.ms/TranslatorGitHub'
+    - name: VANLIGA FRÅGOR OCH SVAR
+      href: 'https://www.microsoft.com/translator/faq.aspx'
+    - name: Kunskapsbas
+      href: 'https://cognitive.uservoice.com/knowledgebase/topics/132647-translator'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/cognitive-services/translator-text-api/'
+    - name: Regional tillgänglighet
+      href: 'https://azure.microsoft.com/global-infrastructure/services/'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/microsoft-translator'
+    - name: UserVoice
+      href: 'https://cognitive.uservoice.com/forums/558796-translator'
