--- a/articles/hdinsight/domain-joined/TOC.yml
+++ b/articles/hdinsight/domain-joined/TOC.yml
@@ -20,6 +20,8 @@
       href: ../spark/apache-spark-intellij-tool-plugin.md
     - name: Använda Eclipse för att länka till domänanslutna kluster
       href: ../spark/apache-spark-eclipse-tool-plugin.md
+    - name: Använda Oozie i domänanslutna kluster
+      href: hdinsight-use-oozie-domain-joined-clusters.md
 - name: Skydda data
   href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
   maintainContext: true
@@ -69,6 +71,10 @@
     - name: Viktig information
       href: ../hdinsight-release-notes.md
       maintainContext: true
+      items:
+        - name: Arkiverad viktig information
+          href: ../hdinsight-release-notes-archive.md
+          maintainContext: true
     - name: Azure-översikt
       href: 'https://azure.microsoft.com/roadmap/?category=intelligence-analytics'
     - name: Få hjälp i forumet
