--- a/articles/virtual-machines/extensions/toc.yml
+++ b/articles/virtual-machines/extensions/toc.yml
@@ -22,6 +22,12 @@
       href: features-windows.md
 - name: Instruktionsguider
   items:
+    - name: Azure Disk Encryption
+      items:
+        - name: Linux
+          href: azure-disk-enc-linux.md
+        - name: Windows
+          href: azure-disk-enc-windows.md
     - name: Anpassat skript
       items:
         - name: Linux – version 2
@@ -32,15 +38,44 @@
           href: custom-script-windows.md
         - name: Azure Service Management (klassisk)
           href: custom-script-classic.md
-    - name: Åtkomst till virtuella datorer
-      href: vmaccess.md
+    - name: Diagnostik
+      items:
+        - name: Linux
+          href: vmsnapshot-linux.md
+        - name: Windows
+          href: vmsnapshot-windows.md
+    - name: Network Watcher-agent
+      items:
+        - name: Linux
+          href: network-watcher-linux.md
+        - name: Windows
+          href: network-watcher-windows.md
+    - name: NVIDIA GPU-drivrutiner
+      items:
+        - name: Linux
+          href: hpccompute-gpu-linux.md
+        - name: Windows
+          href: hpccompute-gpu-windows.md
     - name: Operations Management Suite
       items:
         - name: Linux
           href: oms-linux.md
         - name: Windows
           href: oms-windows.md
-    - name: Diagnostik
+    - name: PowerShell DSC
+      href: dsc-overview.md
+      items:
+        - name: DSC och Windows
+          href: dsc-windows.md
+        - name: DSC och Linux
+          href: dsc-linux.md
+        - name: Hantera autentiseringsuppgifter
+          href: dsc-credentials.md
+        - name: Använd mallar
+          href: dsc-template.md
+    - name: Åtkomst till virtuella datorer
+      href: vmaccess.md
+    - name: Diagnostik för virtuell dator
       items:
         - name: Linux
           href: diagnostics-linux.md
@@ -48,29 +83,6 @@
           href: diagnostics-windows.md
         - name: Använd mallar
           href: diagnostics-template.md
-    - name: Network Watcher-agent
-      items:
-        - name: Linux
-          href: network-watcher-linux.md
-        - name: Windows
-          href: network-watcher-windows.md
-    - name: PowerShell DSC
-      href: dsc-overview.md
-      items:
-        - name: DSC och Windows
-          href: dsc-windows.md
-        - name: Hantera autentiseringsuppgifter
-          href: dsc-credentials.md
-        - name: Använd mallar
-          href: dsc-template.md
-    - name: IaaS-program mot skadlig kod för Windows
-      href: iaas-antimalware-windows.md
-    - name: VM-ögonblicksbild
-      items:
-        - name: Linux
-          href: vmsnapshot-linux.md
-        - name: Windows
-          href: vmsnapshot-windows.md
     - name: Tillägg från tredje part
       items:
         - name: Stackify Retrace
